# AI_solo_coder_task_A_097

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: handlers.rs  lib.rs  main.rs  metrics.rs  models.rs  monte_carlo.rs  optics.rs  storage.rs  websocket.rs
clickhouse/: config.xml  init.sql
frontend/: Dockerfile  app.js  index.html  nginx.conf
mosquitto/: mosquitto.conf
sensor_simulator/: Dockerfile  config.yaml  requirements.txt  sensor_simulator.py
